# DineroClaro

./: .env  .env.example  .gitignore  README.md  app.json  package-lock.json  package.json
.claude/: settings.local.json
app/: _layout.tsx  index.tsx  modal.tsx  onboarding.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/db/: session.py
backend/app/models/: __init__.py  assistant.py  bank_account.py  conversation.py  credit_card.py  financial_profile.py  investment.py  lesson.py  message.py  notification.py  progress.py  recommendation.py  user.py
backend/app/routes/: __init__.py  chat.py  financial.py  health.py  learning.py  recommendations.py  scan.py
backend/app/schemas/: __init__.py  chat.py  financial.py  recommendation.py
backend/app/services/: ai_service.py  chat_service.py  financial_service.py  learning_service.py  recommendation_service.py
backend/app/utils/: __init__.py  formatter.py  localization.py  pagination.py
context/: AppContext.tsx
database/: schema.sql  seed.sql
db/: index.ts
docs/: demo_flow.md  pitch.md  user_stories.md
frontend/: package-lock.json  package.json  tsconfig.json
hooks/: useAssistant.ts  useFinancialProfile.ts  useLearning.ts  useNotifications.ts  useRecommendations.ts  useUser.ts
services/: api.ts  assistant.service.ts  financial.service.ts  learning.service.ts  notification.service.ts  recommendation.service.ts  speech.ts  supabase.ts  user.service.ts
types/: assistant.types.ts  financial.types.ts  (+3 more)
(+45 files in other folders)
